# Amalgabot

./: Cargo.toml
src/: main.rs  menu_manager.rs
