[package]
name = "amalgabot"
version = "0.1.0"
authors = ["Andrew Silver <andrew.silver0@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6", features = ["full"] }
dotenv = "0.15"

eyre = "0.6"
color-eyre = "0.5"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"
tracing-futures = "0.2"

#serde = "1.0"
serde_json = "1.0"
once_cell = "1.7"
nanoid = "0.4"
futures = "0.3"

[dependencies.serenity]
#version = "0.10"
git = "https://github.com/HarmoGlace/serenity.git"
branch = "dropdowns"
default-features = false
features = ["rustls_backend", "builder", "cache", "client", "gateway", "model", "http", "utils", "collector", "unstable_discord_api"]
